# barrett-ros-pkg-wam

.cache/clangd/index/: arm_linking.h.6590515EBA5E52F6.idx  arm_linking_ROS.h.7A0183C51580C872.idx  bhand.h.87F312DAA7B845E5.idx  bhand_node.cpp.D4F73C505FD58DBD.idx  cartesian_velocity_control.cpp.A85E05794F65C01B.idx  impedence_controller.h.CBE9A971FEAA96E3.idx  static_force_estimator_withg.h.D8C4D40BF48905CC.idx  utilities.h.044BF0FB158F6380.idx  visual_path_with_normals.h.FFE6123D35A59536.idx  wam_node.cpp.46F6BE8AB9ED5FDC.idx  wam_node.h.11FC496A06858F69.idx  (+2 more)
wam_bringup/: CMakeLists.txt  compile_commands.json  package.xml
wam_bringup/launch/: data.txt  setup_can0.sh  setup_can1.sh  wam_node_gravity.launch  wam_node_gravity_ares.launch  wam_node_gravity_slax.launch  wam_node_gravity_zeus.launch
wam_bringup/scripts/: DataCollectionDynamics_4DOF_2.py  DataCollectionDynamics_7DOF_2.py  DataCollectionDynamics_7DOF_4.py  DataCollectionDynamics_7DOF_4_gravity.py  DataCollectionDynamics_leader_2_gravity.py  DataCollectionDynamics_slax_7DOF_4_gravity.py  DataCollectionDynamics_slax_7DOF_4_gravity_externalnode.py  datacollection_slax.py  datadynamics_4dof_2_gravity_rowley.py  datadynamics_4dof_4_rowley.py  datadynamics_4dof_4_rowley_feasible.py  datadynamics_7dof_4_rowley.py  datadynamics_7dof_4_rowley_feasible.py  plotdata_4dof_4.py
wam_bringup/src/: wam_node_gravity.cpp  wam_node_teleop.cpp
wam_msgs/: CMakeLists.txt  package.xml
wam_msgs/msg/: WAMJointState.msg
wam_srvs/: CMakeLists.txt
wam_teleop/src/: wam_joystick_teleop.cpp
(+34 files in other folders)
